--- a/charts/cla/README
+++ b/charts/cla/README
@@ -1,6 +1,6 @@
 helm install --set \
 environment="ci",\
-claAssistant.host="CLA_ASSISTANT_HOST",\
+claAssistant.host="cla.test.com",\
 claAssistant.protocol="http",\
 claAssistant.port=80,\
 claAssistant.hostPort=80,\
@@ -11,4 +11,4 @@ mongodb.mongodbRootPassword="MONGODB_ROOT_PASSWORD",\
 mongodb.mongodbUsername="MONGODB_USERNAME",\
 mongodb.mongodbPassword="MONGODB_PASSWORD",\
 mongodb.mongodbDatabase="MONGODB_DATABASE" \
-test .
+cla ./charts/cla/.
